--- a/src/forms/forms.css
+++ b/src/forms/forms.css
@@ -3,6 +3,14 @@
   width: 50%;
   padding: 10px;
 }
+.popups {
+  margin: auto;
+  width: 80%;
+  padding: 10px;
+}
+.tips {
+  padding: 10px;
+}
 .paragraph {
 	font-size: 18px
 }
